# EfficientNMSCustomPlugin

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.pi/: profile-extension-state.json  profiles.json  settings.json
.pi/prompts/: feature-design.md
.pi/skills/creating-custom-tensorrt-plugins/: SKILL.md
docs/agent-instructions/: architecture.md  build-system.md  development-workflow.md
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/plugin_registry_check/: CMakeLists.txt  main.cpp
src/plugins/: CMakeLists.txt
src/plugins/efficientNMSCustom/: CMakeLists.txt  efficientNMSCustomInference.cu  efficientNMSCustomPlugin.cpp
